--- a/music/vue/package.json
+++ b/music/vue/package.json
@@ -7,11 +7,14 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "gh-pages": "^5.0.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -19,6 +22,7 @@
     "last 2 versions",
     "not ie <= 8"
   ],
+  "homepage": "https://github.com/hhoddang/Music-Team",
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
