--- a/project0615/vue/package.json
+++ b/project0615/vue/package.json
@@ -3,7 +3,7 @@
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "김호찬 <melons98@naver.com>",
-  "license": "",
+  "license": "ISC",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
@@ -30,5 +30,7 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
-  }
+  },
+  "main": "webpack.config.js",
+  "keywords": []
 }
